--- a/fe/src/static/css/style.css
+++ b/fe/src/static/css/style.css
@@ -1,5 +1,5 @@
 html, body {
-    height: 100%;
+    min-height: 100%;
 }
 
 body {
@@ -69,11 +69,22 @@ body {
     background-color: #dc3545;
     width: 100%;
     color: #fff;
-    padding: 0.8rem 0rem;
+    padding: 0.8rem 1rem;
 }
 
 .result-other {
     color: rgb(105, 105, 105);
     padding: 1rem 0.5rem 1rem 0.5rem;
     border-bottom: solid rgb(155, 155, 155) 1px;
+}
+
+.result-label {
+    min-width: 100%;
+    height: 100%;
+    padding: 1rem 0.5rem;
+    font-size: 1rem;
+}
+
+.result-no-right-padding {
+    padding-right: 0;
 }
