Kinda finished all of the core function

--- a/fe/src/static/css/style.css
+++ b/fe/src/static/css/style.css
@@ -1,5 +1,5 @@
 html, body {
-    min-height: 100%;
+    min-height: 100vh;
 }
 
 body {
@@ -87,4 +87,8 @@ body {
 
 .result-no-right-padding {
     padding-right: 0;
+}
+
+.answer-selected {
+    color: #c82333;
 }
