Added several gimmicks

--- a/fe/src/static/css/style.css
+++ b/fe/src/static/css/style.css
@@ -19,6 +19,15 @@ body {
     margin: auto;
 }
 
+.grecaptcha-badge {
+    visibility: hidden;
+}
+
+.grecaptcha-text {
+    font-size: 0.7rem;
+    color: rgb(130, 130, 130);
+}
+
 .box-radio {
     /* display: -ms-flexbox;
     display: flex;
