Markdown on 'sources'

--- a/fe/src/static/css/style.css
+++ b/fe/src/static/css/style.css
@@ -137,6 +137,10 @@ body {
     border-color: #d6d8db;
 }
 
+.card-explanation ul > li > p {
+    margin-bottom: 0px;
+}
+
 @media all and (max-width: 1024px) {
     .question-mobile {
         font-size: 1.7rem;
